<resources>
    <string name="app_name">Group_Finder</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_user">User</string>
    <string name="title_activity_event">EventActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>